<resources>
    <string name="app_name">Finance</string>
    <string name="main_title">ВСЕ ТРАТЫ</string>

    <!-- Add Category Screen -->
    <string name="add_category_title">Добавить категорию</string>
    <string name="hint_category_name">Название категории</string>
    <string name="button_add_category">Добавить</string>
    <string name="categories_label">Список категорий:</string>
    <!-- Main Screen -->
    <string name="categories_btn">Категории</string>
    <string name="spendings_btn">Траты</string>
    <string name="add_spending_btn">Добавить</string>
    <string name="qr_btn">QR-сканер</string>
</resources>