<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Заголовок -->
    <TextView
        android:id="@+id/addCategoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_category_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Поле ввода названия категории -->
    <EditText
        android:id="@+id/editTextCategoryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/hint_category_name"
        app:layout_constraintTop_toBottomOf="@id/addCategoryTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- Кнопка добавления -->
    <Button
        android:id="@+id/buttonAddCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_category"
        app:layout_constraintTop_toBottomOf="@id/editTextCategoryName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Лейбл категорий -->
    <TextView
        android:id="@+id/categoriesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories_label"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/buttonAddCategory"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- Список категорий -->
    <ListView
        android:id="@+id/categoryListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:dividerHeight="8dp"
        app:layout_constraintTop_toBottomOf="@id/categoriesLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>