<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="251dp"
        android:layout_height="367dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_nav"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="4"
            android:padding="8dp">

            <!-- Кнопка 1: Категории -->
            <LinearLayout
                android:id="@+id/buttonCategories"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/category"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/category" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/categories_btn"
                    android:textColor="#333333"
                    android:textSize="12sp" />
            </LinearLayout>

            <!-- Кнопка 2: Траты -->
            <LinearLayout
                android:id="@+id/buttonExpenses"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/expenses"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/expenses" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/spendings_btn"
                    android:textColor="#333333"
                    android:textSize="12sp" />
            </LinearLayout>

            <!-- Кнопка 3: Добавить -->
            <LinearLayout
                android:id="@+id/buttonAddExpense"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/add_expenses"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/add_expens" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/add_spending_btn"
                    android:textSize="12sp"
                    android:textColor="#333333" />
            </LinearLayout>

            <!-- Кнопка 4: QR -->
            <LinearLayout
                android:id="@+id/buttonQrScan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/qr_scaner"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/qr_scaner" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/qr_btn"
                    android:textSize="12sp"
                    android:textColor="#333333" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_corners"
        android:focusableInTouchMode="false"
        android:paddingHorizontal="70dp"
        android:paddingVertical="8dp"
        android:text="@string/main_title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>


